--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,11 @@ anyio==4.11.0
 async-timeout==5.0.1
 betterproto==2.0.0b7
 certifi==2025.11.12
+charset-normalizer==3.4.4
+click==8.1.8
 ffmpy==1.0.0
 grpclib==0.4.8
+gTTS==2.5.4
 h11==0.16.0
 h2==4.3.0
 hpack==4.1.0
@@ -18,9 +21,11 @@ protobuf3-to-dict==0.1.5
 pyee==13.0.0
 python-dateutil==2.9.0.post0
 python-socks==2.7.3
+requests==2.32.5
 six==1.17.0
 sniffio==1.3.1
 TikTokLive==6.6.5
 typing_extensions==4.15.0
+urllib3==2.5.0
 websockets==15.0.1
 websockets_proxy==0.1.3
